--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,9 @@ dependencies {
             "javax.servlet:jstl:1.2",
             "javax.validation:validation-api:1.0.0.GA",
             "org.hibernate:hibernate-validator:4.2.0.Final",
-            "org.springframework.data:spring-data-jpa:1.3.4.RELEASE"
+            "org.springframework.data:spring-data-jpa:1.3.4.RELEASE",
+            "org.thymeleaf:thymeleaf-spring3:2.1.2.RELEASE",
+            "org.thymeleaf.extras:thymeleaf-extras-tiles2:2.1.0.RELEASE"
 
     runtime "opensymphony:sitemesh:2.4.2",
             'cglib:cglib-nodep:2.2.2',
