--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,8 @@ apply plugin: 'eclipse-wtp'
 apply plugin: 'tomcat'
 
 ext.slf4jVersion = '1.7.5'
-ext.springSecurityVersion = "3.2.0.RELEASE"
-ext.springVersion = "3.2.6.RELEASE"
+ext.springSecurityVersion = "3.2.1.RELEASE"
+ext.springVersion = "4.0.2.RELEASE"
 
 group = 'org.springframework.security'
 
@@ -51,8 +51,8 @@ dependencies {
             "javax.validation:validation-api:1.0.0.GA",
             "org.hibernate:hibernate-validator:4.2.0.Final",
             "org.springframework.data:spring-data-jpa:1.3.4.RELEASE",
-            "org.thymeleaf:thymeleaf-spring3:2.1.2.RELEASE",
-            "org.thymeleaf.extras:thymeleaf-extras-tiles2:2.1.0.RELEASE"
+            "org.thymeleaf:thymeleaf-spring4:2.1.2.RELEASE",
+            "org.thymeleaf.extras:thymeleaf-extras-tiles2-spring4:2.1.1.RELEASE"
 
     runtime "opensymphony:sitemesh:2.4.2",
             'cglib:cglib-nodep:2.2.2',
